retrive eco : 09-28.md

--- a/eco-part-1/09-28.md
+++ b/eco-part-1/09-28.md
@@ -2,18 +2,34 @@
 
 ## Gain de l'échange pur, Prix et monnaie
 
-1. Motivation de l'echange
+1. Motivation de l'échange
 
-2. Désirs et possibilités: Outils d'analyse
-*Préférences, Possibilités, envie*
+2. Désirs et possibilités: Outils d'analyse - **Préférences, Possibilités, envie**
+ > Ce qui est rare est cher.
 
-- *L'utiliter* est la stisfaction procurer par un bien à celui qui le consomme (ou le détien).
-- *L'utiliter marginal* est la variation d'utiliter (satifaction) obtenue par la consomation (ou la détention) d'une unité supplementataire du bien.
-- *Courbe d'indiference* d'un consomateur est une paire de bien qui assurent un *même niveau* de satisfaction.
+ - **L'utiliter** est la stisfaction procurer par un bien à celui qui le consomme (ou le détien).
+ - **Gain de l'échange global** est le gain d'un échange entre les proposition de chaque agent.
+ - **le gain de l'échange pour un agent** est la diference positive entre le taux d'échange qu'il est pret a à accepter pour que l'échange ai efectivenment lieux.
+ > Ce le benénéfice minimal pour q'une personne accepte un échange.
+
+ - **L'utiliter marginal** est la variation d'utiliter (satifaction) obtenue par la consomation (ou la détention) d'une unité supplementataire du bien.
+
+ - **Courbe d'indiference** d'un consomateur est une paire de bien qui assurent un *même niveau* de satisfaction.
+
+ - **Le taux marginal de substitution *(TMS)*** d'un bien est la quantiter maximal d'un bien qu'un consomateur accepte d'abandonner pour augmenter d'une uniter la consomation d'un autre bien.
+
+ - **Le prix (d'un bien)** se définit comme la quantité d'un autre bien (ou de monnaie) que l'on donne (ou recoit) par uniter de bien que l'on souaite acheter.
+
+ - **La dotation initial** d'un consomateur est la quantiter de bien qu'il dispose avant de prendre un disposition d'echange. (Si la dotation est de la monaie on parle donc de **revenu initial** ou **richesse initial**).
+
+ - **La droite de budget** est l'ensemble des paire de biens qui peuvent etre acquises a un prix donné pour chaquun des biens.
+
+ ![droite de budget](droitedebudget.PNG)
+
+ *droite de budget*
 
 3. Échange et consomation optimal à prix donnés
 
 4. Coût de la vie, indice de prix
 
 5. Faire le point : gain de l'échange et de substitution
-
