--- a/math-gen/10-03.md
+++ b/math-gen/10-03.md
@@ -1,1 +1,5 @@
 # Matematique général
+
+## Limites finies d'un nombre reel
+
+- f(x) est aussi proche qu'on veux de b dés que x est assez proche de a avec x > != < de x E DOM f.
