--- a/anthropo/09-28.md
+++ b/anthropo/09-28.md
@@ -1,3 +1,4 @@
 # anthropologie de l'informatique
 
 Question exament : définir le hasar? (diapo 39)
+                   Quels sont les impacte de l'invention de l'écriture ?
