--- a/eco-part-1/09-28.md
+++ b/eco-part-1/09-28.md
@@ -24,7 +24,7 @@
 
  - **La droite de budget** est l'ensemble des paire de biens qui peuvent etre acquises a un prix donné pour chaquun des biens.
 
- ![droite de budget](droitedebudget.PNG)
+ ![droite de budget](droitedebudget.png)
 
  *droite de budget*
 
